single-cluster/bookinfo/routing-scenarios/reviews-canary-v3.yaml
# Canary deployment: 90% to v1, 10% to v3 (testing new version)
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 90
    - destination:
        host: reviews
        subset: v3
      weight: 10
