single-cluster/bookinfo/routing-scenarios/reviews-v1-only.yaml
# Route all traffic to reviews v1 (no stars)
# Based on: https://github.com/openshift-service-mesh/istio/tree/master/samples/bookinfo/gateway-api

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews
  namespace: bookinfo
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: reviews
      port: 9080
  rules:
    - backendRefs:
        - name: reviews-v1
          port: 9080
