single-cluster/bookinfo/routing-scenarios/route-all-v1.yaml
# Route all services to v1 versions
# Based on: https://github.com/openshift-service-mesh/istio/tree/master/samples/bookinfo/gateway-api

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews
  namespace: bookinfo
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: reviews
      port: 9080
  rules:
    - backendRefs:
        - name: reviews-v1
          port: 9080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: productpage
  namespace: bookinfo
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: productpage
      port: 9080
  rules:
    - backendRefs:
        - name: productpage-v1
          port: 9080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ratings
  namespace: bookinfo
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: ratings
      port: 9080
  rules:
    - backendRefs:
        - name: ratings-v1
          port: 9080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: details
  namespace: bookinfo
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: details
      port: 9080
  rules:
    - backendRefs:
        - name: details-v1
          port: 9080
