single-cluster/bookinfo/routing-scenarios/route-reviews-90-10.yaml
# Canary deployment: 90% v1, 10% v2
# Based on: https://github.com/openshift-service-mesh/istio/tree/master/samples/bookinfo/gateway-api

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews
  namespace: bookinfo
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: reviews
      port: 9080
  rules:
    - backendRefs:
        - name: reviews-v1
          port: 9080
          weight: 90
        - name: reviews-v2
          port: 9080
          weight: 10
