single-cluster/bookinfo/routing-scenarios/traffic-route-50-50.yaml
# Canary deployment: 50% v1, 50% v3
# Based on: https://github.com/openshift-service-mesh/istio/tree/master/samples/bookinfo/gateway-api

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews
  namespace: bookinfo
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: reviews
      port: 9080
  rules:
    - backendRefs:
        - name: reviews-v1
          port: 9080
          weight: 50
        - name: reviews-v3
          port: 9080
          weight: 50
